Fix Registration page on mobile

--- a/application/src/assets/css/style.scss
+++ b/application/src/assets/css/style.scss
@@ -1035,6 +1035,10 @@ Element UI Custom
   body {
     overflow-x: hidden;
   }
+  .modal_bg {
+    opacity: 1;
+    background-color: #fff;
+  }
   .content-page {
     margin-left: 0px !important;
   }
